[gd_scene load_steps=3 format=3 uid="uid://6pmddcctde0v"]

[ext_resource type="Texture2D" uid="uid://b4nwpbrra72fj" path="res://addons/criss-cross/editor/logo.png" id="1_05fnf"]
[ext_resource type="Script" path="res://addons/criss-cross/editor/download_update_panel.gd" id="1_moikk"]

[node name="DownloadUpdatePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_moikk")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("1_05fnf")
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "v1.0.0 is available for download"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DownloadButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Download update"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReleaseNotesButton" type="LinkButton" parent="MarginContainer/VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Read release notes"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/DownloadButton" to="." method="_on_download_button_pressed"]
